# QtModbusClient

./: .gitignore  CMakeLists.txt  CMakePresets.json  CoilTabWidget.cpp  CoilTabWidget.h  CoilTabWidget.ui  ConfigDialog.cpp  ConfigDialog.h  ConfigDialog.ui  LICENSE  MainWindow.cpp  MainWindow.h  MainWindow.ui  ModbusManager.cpp  ModbusManager.h  README.md  main.cpp  modbusmanager.cpp  modbusmanager.h
QtModbusClient/: CMakeLists.txt
QtModbusClient/Headers/: CoilWidget.h  DIWidget.h  HRWidget.h  IRWidget.h  MainWindow.h  ModbusConfigDialog.h  ModbusConnection.h
QtModbusClient/Sources/: CoilWidget.cpp  DIWidget.cpp  HRWidget.cpp  IRWidget.cpp  MainWindow.cpp  ModbusConfigDialog.cpp  ModbusConnection.cpp  main.cpp
QtModbusClient/UI/: CoilWidget.ui  DIWidget.ui  HRWidget.ui  IRWidget.ui  MainWindow.ui  ModbusConfigDialog.ui
